--- a/views/layout.jade
+++ b/views/layout.jade
@@ -110,6 +110,11 @@ html
                 a.navbar-link(href='/network')
                   span.fa.fa-share-alt
                   span.menu-text #{settings.locale.menu_network}
+            if settings.display.masternodesnetwork == true
+              li#masternodesnetwork
+                a.navbar-link(href='/masternodesnetwork')
+                  span.fa.fa-share-alt
+                  span.menu-text #{settings.locale.menu_masternodesnetwork}
             if settings.display.richlist == true
               li#richlist
                 a.navbar-link(href='/richlist')
